--- a/cadastroobra.css
+++ b/cadastroobra.css
@@ -5,7 +5,7 @@
 
 #Titulo{
     font-family: sans-serif;
-    color:#575757;
+    color: #290989;
     margin-left: 0%;
 }
 
@@ -20,7 +20,7 @@ fieldset{
 body{
     font-family: sans-serif;
     font-size: 20px;
-    color: #575757;
+    color: #290989;
     justify-content: center;
     background-color: #fdfdfd;
     background-image: url(fundo.jpg);
@@ -127,7 +127,7 @@ button.botão:hover {
     font-weight: bold;
     font-size: 15px;
     font-family: sans-serif;
-    color: #575757;
+    color: #09270b;
     padding: 6px;
 }
 
